# gm_vis

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  README_how_to_compile
da-gm-1/: README_how_to_compile  da-gm-1.sln
da-gm-1/da-gm-1/: CMakeLists.txt  CMakeSettings.json  Camera.cpp  Camera.h  DataLoader.cpp  DataLoader.h  DisplaySettings.h  DisplayWidget.cpp  DisplayWidget.h  GMDensityRasterizeRenderer.cpp  GMDensityRasterizeRenderer.h  GMDensityRaycastRenderer.cpp  GMDensityRaycastRenderer.h  GMDensityRenderMode.h  GMDensityRenderer.cpp  GMDensityRenderer.h  GMDensityRendererAcc2.cpp  GMDensityRendererAcc2.h  GMDensityRendererAnalyticAdd.cpp  GMDensityRendererAnalyticAdd.h  GMDensityRendererDirectSampled.cpp  GMDensityRendererDirectSampled.h  GMDensityRendererTexSampled.cpp  GMDensityRendererTexSampled.h  GMIsoellipsoidRenderer.cpp  GMIsoellipsoidRenderer.h  GMRenderModes.h  Gaussian.cpp  Gaussian.h  GaussianMixture.cpp  GaussianMixture.h  Helper.h  PointCloud.h  PointCloudLoader.cpp  PointCloudLoader.h  PointCloudRenderer.cpp  PointCloudRenderer.h  ScreenFBO.cpp  ScreenFBO.h  VisualizerWindow.cpp  (+8 more)
da-gm-1/da-gm-1/gmvis/core/: Camera.cpp  Camera.h  DataLoader.cpp  DataLoader.h  GMDensityRasterizeRenderer.cpp  GMDensityRasterizeRenderer.h  GMDensityRaycastRenderer.cpp  GMDensityRaycastRenderer.h  GMDensityRenderer.cpp  GMDensityRenderer.h  GMIsoellipsoidRenderer.cpp  GMIsoellipsoidRenderer.h  GMIsosurfaceRenderer.cpp  GMIsosurfaceRenderer.h  GMPositionsRenderer.cpp  GMPositionsRenderer.h  GMRenderModes.h  Gaussian.cpp  Gaussian.h  GaussianMixture.cpp  GaussianMixture.h  Helper.h  LineRenderer.cpp  LineRenderer.h  LineStrip.h  PointCloud.h  PointCloudRenderer.cpp  PointCloudRenderer.h  RawGaussian.h  Sampler.cpp  Sampler.h  ScreenFBO.cpp  ScreenFBO.h
da-gm-1/da-gm-1/gmvis/pylib/: Image.cpp  Image.h  OffscreenRenderSurface.cpp  OffscreenRenderSurface.h  PythonInterface.cpp  PythonInterface.h  Visualizer.cpp  Visualizer.h  pyimport.cpp  pyimport.h
da-gm-1/da-gm-1/gmvis/pylib/live/: LiveVisWindow.cpp  LiveVisWindow.h  LiveVisWindow.qrc  LiveVisWindow.ui  PythonLiveInterface.cpp  PythonLiveInterface.h
da-gm-1/da-gm-1/gmvis/pylib/standard/: OffscreenRenderSurface.h  PythonInterface.cpp  PythonInterface.h  Visualizer.h
da-gm-1/da-gm-1/gmvis/ui/: DisplayWidget.cpp  DisplayWidget.h  GaussianListItem.cpp  VisualizerWindow.cpp  VisualizerWindow.h  VisualizerWindow.qrc  VisualizerWindow.ui  main.cpp
da-gm-1/da-gm-1/res/: config.txt  transfer.txt
da-gm-1/da-gm-1/shaders/: density.comp  density_acc_falloff.frag  density_acc_proj.frag  density_acc_proj.vert  density_acs.comp  density_acs_color.comp  density_acs_proj.frag  density_acs_proj.vert  density_analyticadd.comp  density_coloring.comp  density_exact.comp  density_notex.comp  density_octree.comp  density_sampling.comp  ellipsoids.frag  ellipsoids.vert  gmpositions.frag  gmpositions.vert  isosurface_proj.frag  isosurface_proj.vert  isosurface_sort_and_render.comp  linestrip.vert  pointcloud.frag  pre.frag  pre.vert
da-gm-1/data/: c1228.ply  c_30fix.ply  c_30l0_unw.ply  c_30l0_w.ply  c_30l1.ply  c_30l2.ply  chair_0002.off  chair_0030.ply  chair_0042.off  chair_0042.ply  chair_0045.off  chair_0045.ply  chair_0048.off  chair_0060.ply  chair_0084.off  chair_0103.ply  chair_0107.ply  chair_0129.off  chair_0142.ply  test30.ply  testac.ply  testgm-pos.ply  testgm.ply  testgmread.ply  testgmsingle.ply  testx1.ply  testx2.ply
da-gm-1/shaders/: density.comp  density_notex.comp  dummy.frag  dummy.vert  isoell.frag  isoell.vert
data/: bed_0001.gma.ply  chair_0001.off.gma.ply  chair_0030.off
doc/: gm_vis_wrapper.py  pylib_example.py
example/: pylib_example.py
gmvis/: res.qrc
gmvis/core/: Camera.cpp  Camera.h  DataLoader.cpp  DataLoader.h  GMDensityRasterizeRenderer.cpp  GMDensityRasterizeRenderer.h  GMDensityRaycastRenderer.cpp  GMDensityRaycastRenderer.h  GMDensityRenderer.cpp  GMIsoellipsoidRenderer.cpp  GMIsoellipsoidRenderer.h  GMIsosurfaceRenderer.cpp  GMIsosurfaceRenderer.h  GMPositionsRenderer.cpp  Gaussian.cpp  Gaussian.h  GaussianMixture.cpp  GaussianMixture.h  LineRenderer.h  PointCloudRenderer.cpp  PointCloudRenderer.h
gmvis/pylib/: OffscreenRenderSurface.cpp  OffscreenRenderSurface.h  pyimport.h
gmvis/shaders/: ellipsoids.frag  gmpositions.frag  isosurface_proj.frag  isosurface_sort_and_render.comp  linestrip.frag  linestrip.vert
gmvis/ui/: DisplayWidget.cpp  GaussianListItem.h  VisualizerWindow.h  main.cpp
